--- a/src/gui/MainFrame.form
+++ b/src/gui/MainFrame.form
@@ -222,7 +222,9 @@
           <SubComponents>
             <Container class="javax.swing.JPanel" name="jPanelGraphiclView">
 
-              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
+                <Property name="useNullLayout" type="boolean" value="true"/>
+              </Layout>
             </Container>
           </SubComponents>
         </Container>
