Vista de Texto!!

--- a/src/gui/MainFrame.form
+++ b/src/gui/MainFrame.form
@@ -166,7 +166,7 @@
               <Font name="Trebuchet MS" size="18" style="1"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="ARCHIVO ENTRADA"/>
+            <Property name="text" type="java.lang.String" value="VISTA TEXTO"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
